Feat: Foundation for TwitchManagedStreamSubject
